--- a/games.html
+++ b/games.html
@@ -65,7 +65,7 @@
                 </div>
             </div>
             <div class="game__demonstration-video">
-                <iframe src="https://www.youtube.com/embed/JJgnsYf8AyU" title="Call of Duty®: WWII – первый трейлер [RU]" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/Wi7C-Ug6c30" title="Battle of the Ardennes - Call of Duty WW2" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
             <div class="game__screenshots">
                 <div class="game__screenshots-one">
