--- a/index.html
+++ b/index.html
@@ -165,7 +165,56 @@
             </div>
         </div>
     </aside>
-
+    <div class="design">
+        <div class="container">
+            <div class="design__wrapper">
+                <div class="design__title">
+                    <h4>Xbox Design Lab</h4>
+                    <p>Make yours one in a billion with new colors,<br> metallic finishes and rubberized grips.</p>
+                </div>
+                <div class="design__btn">
+                    <button class="design__btn-lab"><a href="#">Design Yours</a></button>
+                    <button class="design__btn-lab _lab-color"><a href="#">Explore Consoles & Accessories</a></button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__row">
+                <div class="footer__row-col">
+                    <h4>XBOX</h4>
+                    <ul>
+                        <li><a href="./index.html">Support</a></li>
+                        <li><a href="./page/about-Us.html">Contact us</a></li>
+                        <li><a href="./page/contact.html">Privacy & cookies </a></li>
+                        <li><a href="./page/portfolio.html">Terms of use </a></li>
+                    </ul>
+                </div>
+                <div class="footer__row-col">
+                    <h4>Developers</h4>
+                    <ul>
+                        <li><a href="#">Games</a></li>
+                        <li><a href="#">Windows 10</a></li>
+                        <li><a href="#">Creators Program</a></li>
+                        <li><a href="#">Designed for XBOX</a></li>
+                    </ul>
+                </div>
+                <div class="footer__row-col">
+                    <h4>Follow Us</h4>
+                    <div class="social-links">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer__copyright">
+                <p>English (United States)</p>
+                <p>© Microsoft 2017</p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
