--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                 <a href="" class="slider__btn-game _btn-color">Explore Games</a>
                             </div>
                         </div>
-                        <img src="file:///D:/_work/xbox/img/bg/Star-Wars-Battlefront-II-combat.png" />
+                        <img src="./img/bg/Star-Wars-Battlefront-II-combat.png" />
                     </article>
                     <article>
                         <div class="info top-games">
@@ -72,7 +72,7 @@
                                 <a href="" class="slider__btn-game _btn-color">Explore Games</a>
                             </div>
                         </div>
-                        <img src="file:///D:/_work/xbox/img/bg/Star-Wars-Battlefront-II-combat.png" />
+                        <img src="./img/bg/Star-Wars-Battlefront-II-combat.png" />
                     </article>
                     <article>
                         <div class="info top-games">
@@ -85,7 +85,7 @@
                                 <a href="" class="slider__btn-game _btn-color">Explore Games</a>
                             </div>
                         </div>
-                        <img src="file:///D:/_work/xbox/img/bg/Star-Wars-Battlefront-II-combat.png" />
+                        <img src="./img/bg/Star-Wars-Battlefront-II-combat.png" />
                     </article>
                     <article>
                         <div class="info top-games">
@@ -98,7 +98,7 @@
                                 <a href="" class="slider__btn-game _btn-color">Explore Games</a>
                             </div>
                         </div>
-                        <img src="file:///D:/_work/xbox/img/bg/Star-Wars-Battlefront-II-combat.png" />
+                        <img src="./img/bg/Star-Wars-Battlefront-II-combat.png" />
                     </article>
                 </div>
             </div>
