--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                 <h2>Star Wars</h2>
                                 <p>Battlefront II</p>
                             </div>
-                            <div class="slider__btns">
+                            <div class="slider__btn">
                                 <a href="https://youtu.be/ZwWLns7-xN8" class="slider__btn-game">Watch Trailer</a>
                                 <a href="" class="slider__btn-game _btn-color">Explore Games</a>
                             </div>
@@ -110,7 +110,7 @@
                     <article>
                         <div class="info top-games">
                             <div class="slider__title">
-                                <h4>Star Wars</h4>
+                                <h2>Star Wars</h2>
                                 <p>Battlefront II</p>
                             </div>
                             <div class="slider__btn">
@@ -201,7 +201,7 @@
                         </div>
                         <div class="card__description">
                             <h4>Call of Duty: WWII</h4>
-                            <p>Faster Processing<br> Smoother Gameplay</p>
+                            <p>The C.O.D.E. Bravery Pack<br>is now available in WWII</p>
                         </div>
                         <div class="card__button">
                             <button><a href="./games.html">Explore Consoles & Accessories</a></button>
@@ -209,11 +209,11 @@
                     </article>
                     <article>
                         <div class="card__img">
-                            <img src="./img/swiper/swiper-car.png" alt="">
+                            <img src="./img/swiper/swiper-gun.png" alt="">
                         </div>
                         <div class="card__description">
                             <h4>Destiny 2</h4>
-                            <p>Faster Processing<br> Smoother Gameplay</p>
+                            <p>The Witness and its newest<br> Disciple are here.</p>
                         </div>
                         <div class="card__button">
                             <button><a href="4">Explore Consoles & Accessories</a></button>
@@ -225,7 +225,7 @@
                         </div>
                         <div class="card__description">
                             <h4>STEEP</h4>
-                            <p>Faster Processing<br> Smoother Gameplay</p>
+                            <p>Steep is a sports game<br> developed by Ubisoft Annecy.</p>
                         </div>
                         <div class="card__button">
                             <button><a href="4">Explore Consoles & Accessories</a></button>
@@ -233,11 +233,11 @@
                     </article>
                     <article>
                         <div class="card__img">
-                            <img src="./img/swiper/swiper-cod.png" alt="">
+                            <img src="./img/swiper/swiper-car.png" alt="">
                         </div>
                         <div class="card__description">
                             <h4>Forza Motorsport 7</h4>
-                            <p>Faster Processing<br> Smoother Gameplay</p>
+                            <p>Forza Motorsport 7<br> Hoonigan Car Pack</p>
                         </div>
                         <div class="card__button">
                             <button><a href="4">Explore Consoles & Accessories</a></button>
@@ -330,6 +330,12 @@
             </div>
         </div>
     </footer>
+</body>
+
+</html>
+</div>
+</div>
+</footer>
 </body>
 
 </html>
